# lugh

./: CLAUDE.md  README.md
.claude-plugin/: marketplace.json
plugins/lugh/: README.md
plugins/lugh/.claude-plugin/: plugin.json
plugins/lugh/skills/adr/: SKILL.md
plugins/lugh/skills/arch/: SKILL.md
plugins/lugh/skills/data-profile/: SKILL.md
plugins/lugh/skills/data-quality/: SKILL.md
plugins/lugh/skills/eval/: SKILL.md
plugins/lugh/skills/experiment/: SKILL.md
plugins/lugh/skills/featurize/: SKILL.md
plugins/lugh/skills/ml-api/: SKILL.md
plugins/lugh/skills/model-card/: SKILL.md
plugins/lugh/skills/monitor/: SKILL.md
plugins/lugh/skills/new-ds-project/: SKILL.md
plugins/lugh/skills/new-ds-project/template/: .dockerignore  .env-template  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  dvc.yaml  justfile  params.yaml  pyproject.toml  ruff.toml
plugins/lugh/skills/new-ds-project/template/.github/workflows/: ci.yml
plugins/lugh/skills/new-ds-project/template/conf/: config.yaml
plugins/lugh/skills/new-ds-project/template/data/: _gitignore
plugins/lugh/skills/new-ds-project/template/models/: README.md  _gitignore
plugins/lugh/skills/new-ds-project/template/notebooks/: template.py
plugins/lugh/skills/new-ds-project/template/sql/: .sqlfluff
plugins/lugh/skills/new-ds-project/template/src/__PACKAGE__/: main.py
plugins/lugh/skills/new-ds-project/template/tests/: test_my_module.py
plugins/lugh/skills/next/: SKILL.md
plugins/lugh/skills/spec/: SKILL.md
